[package]
name = "libsignalk"
version = "0.1.1"
authors = ["Tim Mathews <tim@signalk.org>"]
license = "Apache-2.0"
build = "build.rs"

[features]
default = ["serde_codegen"]
unstable = ["serde_derive"]

[build-dependencies]
serde_codegen = { version = "0.8", optional = true }

[dependencies]
serde = "0.8"
serde_derive = { version = "0.8", optional = true }
serde_xml = "*"
