[package]
name = "libsignalk"
version = "0.2.0"
authors = ["Tim Mathews <tim@signalk.org>"]
license = "Apache-2.0"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde-xml-rs = { git = "https://github.com/RReverser/serde-xml-rs.git" }
chrono = { version = "0.4", features = ["serde"] }
